Fix scrollbar

--- a/src/renderer/src/assets/css/base.css
+++ b/src/renderer/src/assets/css/base.css
@@ -120,3 +120,14 @@
   font-weight: 800;
   font-style: italic;
 }
+
+
+html,
+body,
+#app{
+  height: 100%;
+}
+
+body{
+  overflow: hidden;
+}
